k8s/services/external/app/home-assistant/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: home-assistant
  hostnames:
    - home.phemma.fr
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: home-assistant
          port: 8123
